welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:57: error: not found: value carre
  carre();
  ^FlowerCase:64: error: not found: value carre
  carre();
  ^FlowerCase:66: error: not found: value carre
  carre();
  ^FlowerCase:72: error: not found: value carre
  carre();
  ^